--- a/config/database.yml
+++ b/config/database.yml
@@ -3,39 +3,56 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem "sqlite3"
-#
+
+base: &base
+  adapter: mysql2
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_unicode_ci
+
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  <<: *base
+  pool: 5
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
+  host: <%= ENV['DB_HOST'] %>
+  port: <%= ENV['DB_PORT'] %>
+
+default_replica: &default_replica
+  <<: *base
+  pool: 5
+  username: <%= ENV['DB_REPLICA_USER'] || ENV['DB_USER'] %>
+  password: <%= ENV['DB_REPLICA_PASSWORD'] || ENV['DB_PASSWORD'] %>
+  host: <%= ENV['DB_REPLICA_HOST'] || ENV['DB_HOST'] %>
+  port: <%= ENV['DB_REPLICA_POST'] || ENV['DB_PORT'] %>
 
 development:
-  <<: *default
-  database: storage/development.sqlite3
+  primary:
+    <<: *default
+    username: <%= ENV.fetch("DB_USER", root) %>
+    database: bikehikaku_development
+  replica:
+    <<: *default_replica
+    username: <%= ENV.fetch("DB_USER", root) %>
+    database: bikehikaku_development
+    replica: true
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: storage/test.sqlite3
+  primary:
+    <<: *default
+    username: root
+    database: bikehikaku_test
+  replica:
+    <<: *default_replica
+    username: root
+    database: bikehikaku_test
+    replica: true
 
-
-# Store production database in the storage/ directory, which by default
-# is mounted as a persistent Docker volume in config/deploy.yml.
 production:
   primary:
     <<: *default
-    database: storage/production.sqlite3
-  cache:
-    <<: *default
-    database: storage/production_cache.sqlite3
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *default
-    database: storage/production_queue.sqlite3
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *default
-    database: storage/production_cable.sqlite3
-    migrations_paths: db/cable_migrate
+    database: <%= ENV['DB_DATABASE'] %>
+  replica:
+    <<: *default_replica
+    database: <%= ENV['DB_DATABASE'] %>
+    replica: true
